# VisualizeGit

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  ReadMe.md  app.py  development-read.txt  pyproject.toml  requirements.txt  ui.py
Animations/: base.py  commit.py  default.py  fetch.py  status.py
commands/: commit.py  fetch.py  status.py
core/: git_model.py  git_utils.py  ui_config.py  ui_utils.py
vgit/: __main__.py  cli.py  ui.py
vgit/animations/: base.py  commit.py  default.py  fetch.py  status.py
vgit/commands/: commit.py  fetch.py  status.py
vgit/core/: git_model.py  git_utils.py  runner.py  ui_config.py  ui_utils.py
vgit/examples/: app.py
